# mcp-mayhem

./: LICENSE
structuredJsonValidator/: .gitignore  README.md  conftest.py  pyproject.toml
structuredJsonValidator/consumers/: store.py
structuredJsonValidator/consumers/claims/: __init__.py  claim.schema.json  operations.py  rules.py  views.py
structuredJsonValidator/consumers/lean/: __init__.py  declaration.schema.json  operations.py  rules.py  views.py
structuredJsonValidator/core/: __init__.py  audit.py  cli.py  engine.py  errors.py  query.py  schema.py  store.py
structuredJsonValidator/data/: sample.json  tag_vocab.sample.json
structuredJsonValidator/mcp_server/: README.md  __init__.py  server.py
structuredJsonValidator/scripts/: migrate_to_collections.py  serve.ps1
structuredJsonValidator/tests/: conftest.py  test_claims_layer.py  test_deps_layer.py  test_engine.py  test_rules_negative.py  test_schema_negative.py
