[project]
name = "structured-json-validator"
version = "0.1.0"
description = "Schema-enforced flat-file SSOT registry: strict schema, operation-based writes, append-only audit + hash-drift detection, projection reader, optional MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.0"]

[project.scripts]
sjv = "core.cli:main"
sjv-mcp = "mcp_server.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "consumers", "consumers.lean", "mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
